--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>400</height>
+    <width>1269</width>
+    <height>671</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,8 +25,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>600</width>
-      <height>300</height>
+      <width>1000</width>
+      <height>1000</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -42,8 +42,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>700</width>
-     <height>21</height>
+     <width>1269</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
@@ -129,6 +129,9 @@
    </property>
   </action>
   <action name="actSaveFile">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>保存(&amp;S)</string>
    </property>
@@ -324,6 +327,9 @@
    <property name="shortcut">
     <string>Ctrl+T</string>
    </property>
+   <property name="visible">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="actMove">
    <property name="icon">
@@ -341,6 +347,9 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+M</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
    </property>
   </action>
   <action name="actRotate">
@@ -360,6 +369,9 @@
    <property name="shortcut">
     <string>Ctrl+R</string>
    </property>
+   <property name="visible">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="actScale">
    <property name="icon">
@@ -378,6 +390,9 @@
    <property name="shortcut">
     <string>Ctrl+E</string>
    </property>
+   <property name="visible">
+    <bool>false</bool>
+   </property>
   </action>
   <action name="actDelete">
    <property name="icon">
@@ -395,6 +410,9 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+D</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
    </property>
   </action>
   <action name="actUndo">
@@ -449,6 +467,9 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+B</string>
+   </property>
+   <property name="visible">
+    <bool>false</bool>
    </property>
   </action>
  </widget>
