--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,7 +43,7 @@
      <x>0</x>
      <y>0</y>
      <width>1269</width>
-     <height>26</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
@@ -116,6 +116,9 @@
    <property name="statusTip">
     <string>新建(N)</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actOpenFile">
    <property name="text">
@@ -126,6 +129,9 @@
    </property>
    <property name="statusTip">
     <string>打开(O)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="actSaveFile">
@@ -303,9 +309,6 @@
    <property name="statusTip">
     <string>颜色(O)</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
-   </property>
   </action>
   <action name="actCut">
    <property name="checkable">
@@ -470,6 +473,11 @@
    </property>
    <property name="visible">
     <bool>false</bool>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>--</string>
    </property>
   </action>
  </widget>
